syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.via.sep3.persistentserver.proto";
option csharp_namespace = "PersistentServerClient";
option java_outer_classname = "PersistentServerProto";
option objc_class_prefix = "PSP";

package persistentserver;

service PersistentServer{
  rpc GetTotalBalance(ClientBasicDTO) returns (TotalBalance){}
  rpc GetClientById(ClientBasicDTO) returns (Client){}
  rpc GetAccountById(AccountBasicDTO) returns (GrpcAccount){}
  rpc GetClientAccounts(ClientBasicDTO) returns (GrpcAccounts){}
  rpc GetCurrencyById(CurrencyBasicDTO) returns (GrpcCurrency){}
  rpc GetCurrencies(AccountBasicDTO) returns (GrpcCurrencies){}
  rpc CreateClient(ClientCreationDTO) returns (Client){}
  rpc CreateAccount(AccountCreationDTO) returns (GrpcAccount){}
}
message ClientBasicDTO{
  int64 clientId = 1;
}
message ClientCreationDTO{
  string userName = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
  string country = 5;
  string identityDocument = 6;
  string birthday = 7;
  string planType = 8;
}
message TotalBalance{
  double totalBalance = 1;
  int32 currencyName = 2;
}
message Client{
  int64 clientId = 1;
  string userName = 2;
  string firstName = 3;
  string lastName = 4;
  string password = 5;
  string country = 6;
  string identityDocument = 7;
  string birthday = 8;
  string planType = 9;
}

message AccountBasicDTO{
  int64 accountId = 1;
}

message GrpcAccount{
  int64 accountId = 1;
  string mainCurrency = 2;
  bool loan = 3;
  int64 clientId = 4;
}
message GrpcAccounts{
  repeated GrpcAccount accounts = 1;
}
message AccountCreationDTO{
  string mainCurrency = 1;
  int64 clientId = 2;
}
message CurrencyBasicDTO{
  int64 currencyId = 1;
}
message GrpcCurrency{
  int64 currencyId = 1;
  string name = 2;
  double balance = 3;
  int64 accountId = 4;
}
message GrpcCurrencies{
  repeated GrpcCurrency currencies = 1;
}